<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_ear_spy">About EAR SPY</string>
    <string name="accept">Accept</string>
    <string name="add_features">Add Features</string>
    <string name="add_features_description">EAR SPY is great, but you can make it even better by adding some new features.</string>
    <string name="allow">Access granted</string>
    <string name="an_overpass_production">An Overpass Production</string>
    <string name="app_modified">Application Modified</string>
    <string name="app_modified_text">Not activated. This application was moved from the original location or hacked. Please remove your license and try again.</string>
    <string name="app_name">Ear Spy</string>
    <string name="application_error">Application error: %1$s</string>
    <string name="application_varifying">Application Verifying...</string>
    <string name="audio_volume">Audio Volume</string>
    <string name="buy">Buy</string>
    <string name="buy_button">Get app</string>
    <string name="buy_ear_spy_pro">Or Buy EAR SPY Pro</string>
    <string name="buy_ear_spy_pro_description">Get all the features above and any we add later.</string>
    <string name="buy_with_tweet">Buy with a Tweet</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_mic">Click to turn OFF</string>
    <string name="cannot_check">Not activated. Please report to the application developer.</string>
    <string name="caution">Caution</string>
    <string name="check_license">Check license</string>
    <string name="checking_license">Checking license...</string>
    <string name="chinese_mandarin">Chinese Mandarin</string>
    <string name="chk_headphone_alert">Don\'t show this dialog box again.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text_phone">%1$s won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_delete_msg">Are you sure you want to delete this file ?</string>
    <string name="continue_text">Continue</string>
    <string name="convdir">FreeMP3Droid</string>
    <string name="conversion_ready">MP3 is ready</string>
    <string name="convert_later">Convert later</string>
    <string name="converting">MP3 is converting</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="credits">Credits</string>
    <string name="credits_detail">Creator/Producor: %1$s \10 Developer: %2$s</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="default_web_client_id">973749136083-ilrim4jtuldaauaeb0unc0j71hplh7tf.apps.googleusercontent.com</string>
    <string name="delete">Delete</string>
    <string name="developer" />
    <string name="developer_mode">Developer mode</string>
    <string name="dont_allow">Access denied</string>
    <string name="ear_spy_title">EAR SPY</string>
    <string name="english">English</string>
    <string name="enter_code">Please Enter Code</string>
    <string name="equalizer">Equalizer</string>
    <string name="error">Error</string>
    <string name="extended_equalizer">Extended Equalizer</string>
    <string name="extended_equalizer_description">This device supports %1$d-band equalizers, BassBoost, Virtualizer%2$s.</string>
    <string name="fail">Fail</string>
    <string name="file_path">File Path :</string>
    <string name="firebase_database_url">https://wroolie-co-uk-api-project-973749136083.firebaseio.com</string>
    <string name="follow_on_twitter">Follow on Twitter</string>
    <string name="follow_twitter">Follow on Twitter</string>
    <string name="ga_trackingId">UA-38071993-10</string>
    <string name="gcm_defaultSenderId">973749136083</string>
    <string name="google_api_key">AIzaSyBFT8Vw4GsrZiK_jEGsjPZVLIDfiGtuVgk</string>
    <string name="google_app_id">1:973749136083:android:460d7cabd3b3ee79</string>
    <string name="google_crash_reporting_api_key">AIzaSyBFT8Vw4GsrZiK_jEGsjPZVLIDfiGtuVgk</string>
    <string name="google_storage_bucket">wroolie.co.uk:api-project-973749136083.appspot.com</string>
    <string name="headphone_alert_msg">Be sure to use headphones when using Ear Spy to prevent feedback. \10\10To start the application, click on the center sphere.</string>
    <string name="headphone_required">Headphones required</string>
    <string name="hindi">Hindi</string>
    <string name="home_screen_widget">Home Screen Widget</string>
    <string name="home_screen_widget_description">Start and Stop EAR SPY from your home screen.</string>
    <string name="installed">Installed</string>
    <string name="invalid_value">Invalid Value</string>
    <string name="invalid_value_text">Not activated. Please check if the phone is turned on.</string>
    <string name="key_creation">Key Creation Failed</string>
    <string name="key_creation_text">Not activated. Please check if your phone has sufficient free storage space.</string>
    <string name="language_title">Languages</string>
    <string name="license_delete">Delete License</string>
    <string name="license_deleted_re">License deleted. Getting new license from server…</string>
    <string name="load_configuration">Load Configuration</string>
    <string name="mc_api_key">80f58dbe4544d44a63e9efa54045ba88-us4</string>
    <string name="mc_list_id">ed07a26c0c</string>
    <string name="mic_active">EarSpy is ON</string>
    <string name="mic_active_recording">EarSpy is ON - Recording . . .</string>
    <string name="more_options">More Options</string>
    <string name="mp3_extenstion">.mp3</string>
    <string name="mp3_gallery">MP3 Gallery</string>
    <string name="mp3_recording">MP3 Recording</string>
    <string name="mp3_recording_description">Add the ability to record what you hear.</string>
    <string name="name">Name</string>
    <string name="newsletter_dialog_detail">Subscribing...</string>
    <string name="newsletter_dialog_title">Please Wait!</string>
    <string name="newsletter_email">Email</string>
    <string name="newsletter_fail">Subscription failed</string>
    <string name="newsletter_name">Name</string>
    <string name="newsletter_paragraph">We\'re so glad you are trying out Ear Spy. We really hope you like it.\10\10At Overpass, we are constantly creating new apps and adding new features to this one. We\'d love to keep you informed of what\'s going on.\10\10If you register for our newsletter, we\'ll send you information about our apps and what\'s going on in the app industry. We will NEVER give your email address to anyone else. And you can unsubscribe from our newsletter at any time.\10\10And, as a thank you, we\'ll include another code to unlock an Ear Spy feature in first email. Even if you immediately unsubscribe, you can use the code.</string>
    <string name="newsletter_subscribe">Subscribe</string>
    <string name="newsletter_success">Subscribed Successfully</string>
    <string name="newsletter_unlock">Unlock</string>
    <string name="newsletter_unlock_info">Unlock Code (from your first email)</string>
    <string name="no">No</string>
    <string name="no_record_found">No Record Found</string>
    <string name="ok">OK</string>
    <string name="other_effects">Other Effects</string>
    <string name="other_overpass_apps">Other Overpass Apps</string>
    <string name="our_newsletter">Our Newsletter</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="remove_ads_description">Enjoy an ad-free experience!</string>
    <string name="save">Save</string>
    <string name="save_as">Save As</string>
    <string name="save_current_configuration">Save Current Configuration</string>
    <string name="unlock_code">Unlock Code</string>
    <string name="unlock_link">1. Go to %s</string>
    <string name="unlock_paragraph1">We hope you are enjoying Ear SPY. We\'re proud of it and would like to give you the chance to unlock one of our premium features by buying it with a Tweet.\10\10Help us spread the word about Ear SPY and you can unlock the following feature:</string>
    <string name="unlock_points_to_follow">2. Click on the link to Tweet about Ear SPY or like Ear SPY on Facebook.\103. You will be given a code number to enter.\104. Enter the code below.\105. Enjoy the new feature.</string>
</resources>