<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/light_gray" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:background="#3c3731" android:paddingBottom="1dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="30dp" android:textStyle="bold" android:textColor="#ff0000" android:gravity="center" android:layout_gravity="center" android:background="#1c1c1c" android:layout_width="match_parent" android:layout_height="40dp" android:layout_centerHorizontal="true"/>
        <TextView android:textSize="30dp" android:textStyle="bold" android:textColor="#ff0000" android:gravity="center" android:layout_gravity="center" android:background="#1a1a1a" android:layout_width="match_parent" android:layout_height="20dp" android:layout_marginTop="20dp" android:layout_centerHorizontal="true"/>
        <TextView android:textSize="28dp" android:textStyle="bold" android:textColor="#ff0000" android:gravity="center" android:layout_gravity="center" android:id="@+id/txt_earspy" android:layout_width="match_parent" android:layout_height="40dp" android:text="@string/add_features" android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:paddingBottom="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp">
            <TextView android:textSize="16dp" android:textColor="#fff" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/version_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="20dp" android:text="@string/add_features_description"/>
            <LinearLayout android:gravity="top" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18dp" android:textStyle="bold" android:textColor="@color/red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/extended_equalizer" android:layout_weight="1"/>
                <Button android:textSize="18dp" android:textColor="#fff" android:id="@+id/btnExtendedEqu" android:background="@drawable/bg_selector" android:layout_width="90dp" android:layout_height="30dp" android:text="@string/buy" android:onClick="onClickExtendedEqualizer"/>
            </LinearLayout>
            <TextView android:textSize="15dp" android:textColor="#fff" android:id="@+id/txt_equalizer" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/extended_equalizer_description"/>
            <LinearLayout android:gravity="top" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp">
                <TextView android:textSize="18dp" android:textStyle="bold" android:textColor="@color/red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_screen_widget" android:layout_weight="1"/>
                <Button android:textSize="18dp" android:textColor="#fff" android:id="@+id/btnHomeWidget" android:background="@drawable/bg_selector" android:layout_width="90dp" android:layout_height="30dp" android:text="@string/buy" android:onClick="onClickHomeScreenWidget"/>
            </LinearLayout>
            <TextView android:textSize="15dp" android:textColor="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/home_screen_widget_description"/>
            <LinearLayout android:gravity="top" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp">
                <TextView android:textSize="18dp" android:textStyle="bold" android:textColor="@color/red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mp3_recording" android:layout_weight="1"/>
                <Button android:textSize="18dp" android:textColor="#fff" android:id="@+id/btnMp3Recording" android:background="@drawable/bg_selector" android:layout_width="90dp" android:layout_height="30dp" android:text="@string/buy" android:onClick="onmClickMp3Recording"/>
            </LinearLayout>
            <TextView android:textSize="15dp" android:textColor="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/mp3_recording_description"/>
            <LinearLayout android:gravity="top" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
                <TextView android:textSize="18dp" android:textStyle="bold" android:textColor="@color/red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remove_ads" android:layout_weight="1"/>
                <Button android:textSize="18dp" android:textColor="#fff" android:id="@+id/btnRemove" android:background="@drawable/bg_selector" android:layout_width="90dp" android:layout_height="30dp" android:text="@string/buy" android:onClick="onClickRemoveAds"/>
            </LinearLayout>
            <TextView android:textSize="15dp" android:textColor="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/remove_ads_description"/>
            <View android:background="@color/white" android:layout_width="wrap_content" android:layout_height="2dp" android:layout_marginLeft="40dp" android:layout_marginTop="20dp" android:layout_marginRight="40dp"/>
            <LinearLayout android:gravity="top" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
                <TextView android:textSize="18dp" android:textStyle="bold" android:textColor="@color/red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/buy_ear_spy_pro" android:layout_weight="1"/>
                <Button android:textSize="18dp" android:textColor="#fff" android:id="@+id/btnPro" android:background="@drawable/bg_selector" android:layout_width="90dp" android:layout_height="30dp" android:text="@string/buy" android:onClick="onClickPurchasePro"/>
            </LinearLayout>
            <TextView android:textSize="15dp" android:textColor="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/buy_ear_spy_pro_description"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
