<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/light_gray" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:background="#3c3731" android:paddingBottom="1dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="30dp" android:textStyle="bold" android:textColor="#ff0000" android:gravity="center" android:layout_gravity="center" android:background="#1c1c1c" android:layout_width="match_parent" android:layout_height="40dp" android:layout_centerHorizontal="true"/>
        <TextView android:textSize="30dp" android:textStyle="bold" android:textColor="#ff0000" android:gravity="center" android:layout_gravity="center" android:background="#1a1a1a" android:layout_width="match_parent" android:layout_height="20dp" android:layout_marginTop="20dp" android:layout_centerHorizontal="true"/>
        <TextView android:textSize="28dp" android:textStyle="bold" android:textColor="@color/red" android:gravity="center" android:layout_gravity="center" android:id="@+id/txt_earspy" android:layout_width="match_parent" android:layout_height="40dp" android:text="@string/buy_with_tweet" android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true" android:layout_weight="1">
        <LinearLayout android:orientation="vertical" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16dp" android:textColor="#fff" android:gravity="left" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="20dp" android:text="@string/unlock_paragraph1"/>
            <TextView android:textSize="18dp" android:textStyle="bold" android:textColor="@color/red" android:id="@+id/feature_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="@string/extended_equalizer"/>
            <TextView android:textSize="16dp" android:textColor="#fff" android:id="@+id/feature_desc" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginBottom="20dp" android:text="@string/extended_equalizer_description"/>
            <TextView android:textSize="16dp" android:textColor="#fff" android:textColorLink="@color/white" android:gravity="left" android:autoLink="web" android:layout_gravity="left" android:id="@+id/link" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unlock_link"/>
            <TextView android:textSize="16dp" android:textColor="#fff" android:gravity="left" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unlock_points_to_follow"/>
            <TextView android:textSize="20dp" android:textColor="#fff" android:id="@+id/txt_equalizer" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/unlock_code"/>
            <EditText android:textSize="18dp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/code" android:layout_width="match_parent" android:layout_height="wrap_content" android:text=""/>
            <Button android:textSize="18dp" android:textColor="#fff" android:layout_gravity="right" android:id="@+id/btnUnlock" android:background="@drawable/bg_selector" android:layout_width="90dp" android:layout_height="30dp" android:layout_marginTop="10dp" android:layout_marginRight="20dp" android:layout_marginBottom="40dp" android:text="@string/buy" android:onClick="onClickExtendedEqualizer"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
