<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/light_gray" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="24dp" android:textColor="@color/blue" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/caution"/>
    <View android:background="@color/blue" android:layout_width="wrap_content" android:layout_height="2dp" android:layout_marginTop="10dp"/>
    <TextView android:textSize="16dp" android:textColor="#fff" android:paddingLeft="15dp" android:paddingTop="10dp" android:paddingRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/headphone_alert_msg"/>
    <CheckBox android:id="@+id/chk_headphone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="20dp" android:text="@string/chk_headphone_alert"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp">
        <Button android:textSize="16dp" android:textColor="#fff" android:id="@+id/ok" android:background="@drawable/bg_selector" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/ok" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
