<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/light_gray" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="24dp" android:textColor="@color/blue" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/save_as"/>
    <View android:background="@color/blue" android:layout_width="wrap_content" android:layout_height="2dp" android:layout_marginTop="10dp"/>
    <TextView android:textSize="16dp" android:textColor="#fff" android:paddingLeft="10dp" android:paddingTop="10dp" android:paddingRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/save_current_configuration"/>
    <LinearLayout android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp">
            <TextView android:textSize="16dp" android:textColor="#fff" android:paddingTop="10dp" android:paddingRight="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name"/>
            <TextView android:textSize="16dp" android:textColor="#fff" android:paddingTop="10dp" android:paddingRight="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=" : "/>
        </LinearLayout>
        <LinearLayout android:background="@color/blue" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
            <EditText android:textSize="16dp" android:textColor="#fff" android:id="@+id/config_name" android:background="@color/light_gray" android:padding="3dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="2dp" android:selectAllOnFocus="true" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp">
        <Button android:textSize="16dp" android:textColor="#fff" android:id="@+id/cancel" android:background="@drawable/bg_selector" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="@string/cancel" android:layout_weight="1"/>
        <Button android:textSize="16dp" android:textColor="#fff" android:id="@+id/save" android:background="@drawable/bg_selector" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/save" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
